# visionProTeleop

./: .gitignore
Tracking Streamer/: CombinedStreamingView.swift  ContentView.swift  ImmersiveView.swift  KeychainManager.swift  RecordingManager.swift  StatusView.swift  WebRTCClient.swift  🥽AppModel.swift
Tracking Streamer.xcodeproj/: project.pbxproj
Tracking Streamer.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
Tracking Streamer.xcodeproj/project.xcworkspace/xcuserdata/ferdinand.xcuserdatad/: UserInterfaceState.xcuserstate
Tracking Streamer.xcodeproj/xcshareddata/xcschemes/: VisionProTeleop.xcscheme
Tracking Streamer.xcodeproj/xcuserdata/ferdinand.xcuserdatad/xcschemes/: xcschememanagement.plist
Tracking Streamer/Supporting files/: Info.plist  Localizable.xcstrings
Tracking Viewer/Models/: KeychainManager.swift
assets/mujoco_demos/logs/: ep0.npz
avp_stream/: streamer.py
catmux_config/: config.yaml
examples/: 01_visualize_hand_callback.py  02_visualize_hand_direct.py  03_visualize_hand_with_audio_callback.py  06_stream_from_camera.py  09_mujoco_streaming.py  09_mujoco_streaming_original.py  10_teleop_osc_franka.py  15_franka_visionpro_teleop.py  README.md  notes.md
ros2_ws/: notes.MD
ros2_ws/src/inverse_kinematics/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/inverse_kinematics/config/: invers_kinematics.yaml  inverse_kin.rviz  inverse_kinematics.yaml
ros2_ws/src/inverse_kinematics/launch/: launch_inverse_kin.launch.py
ros2_ws/src/inverse_kinematics/src/: inverse_kinematics.cpp  inverse_kinematics_node.cpp
ros2_ws/src/robot_description/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/robot_description/mujoco_models/meshes/: camera.stl  gripper_base.stl  gripper_left3.stl  gripper_right2.stl  joint1.stl  joint2.stl  joint4.stl  joint5.stl  joint6.stl  mycobot_base.stl  suit_env.mtl
ros2_ws/src/robot_description/mujoco_models/meshes _acsiii/: gripper_base.stl  gripper_left3.stl  gripper_right2.stl  joint2.stl  joint7.stl
ros2_ws/src/robot_description/mujoco_models_old/: mycobot_280.xml
ros2_ws/src/robot_description/mujoco_models_old/meshes/: gripper_left1.stl  gripper_left2.stl  gripper_right1.stl  gripper_right3.stl  joint3.stl  joint7.stl
ros2_ws/src/robot_description/mujoco_models_old/meshes _acsiii/: gripper_left1.stl  gripper_left2.stl  gripper_right1.stl  gripper_right3.stl  joint1.stl  joint4.stl  joint5.stl  joint6.stl
ros2_ws/src/robot_description/mycobot_mujoco/: mycobot_280_m5_mujoco copy.xml  mycobot_280_m5_mujoco.xml  mycobot_280_m5_mujoco_original.xml  scene_mycobot.usdz  scene_mycobot.xml  scene_mycobot_original.xml
ros2_ws/src/robot_description/mycobot_mujoco/meshes_mujoco/sam_models/: computer_mouse_material.mtl  eraser_material.mtl  laptop_material.mtl  remote_material.mtl  telephone_material.mtl  waterbottle_material.mtl
ros2_ws/src/robot_description/mycobot_mujoco/scene_mycobot_usd/: mycobot scene.usda
ros2_ws/src/robot_description/mycobot_mujoco/xml/: mycobot_280_m5_mujoco.xml  mycobot_280jn_mujoco.xml  mycobot_280jn_mujoco_original.xml  scene_mycobot.usdz  scene_mycobot.xml
ros2_ws/src/robot_description/mycobot_mujoco/xml/scene_mycobot_usd/: mycobot scene.usda
ros2_ws/src/robot_description/mycobot_mujoco/xml/scene_mycobot_usd/Payload/: Contents.usda  Geometry.usda  GeometryLibrary.usdc  Materials.usda  MaterialsLibrary.usdc  Physics.usda
ros2_ws/src/robot_description/ufactory_xarm7/: scene.usdz  xarm7.xml
ros2_ws/src/robot_description/ufactory_xarm7/scene_usd/: xarm7 scene.usda
ros2_ws/src/robot_description/ufactory_xarm7/scene_usd/Payload/: Contents.usda  Geometry.usda  GeometryLibrary.usdc  Materials.usda  MaterialsLibrary.usdc  Physics.usda
ros2_ws/src/robot_description/urdf/adaptive_gripper/: mycobot_adaptive_gripper.urdf  mycobot_adaptive_gripper.xacro
ros2_ws/src/robot_description/urdf/mycobot_280_m5/: mycobot_280_m5.urdf  mycobot_280_m5_adaptive_gripper.urdf  mycobot_280_m5_camera_adaptive_gripper.urdf  mycobot_280_m5_camera_flange_adaptive_gripper.urdf  mycobot_280_m5_with_camera_flange.urdf  mycobot_280_m5_with_pump.urdf  mycobot_with_vision.urdf  mycobot_with_vision_copy.urdf  withenv.urdf
ros2_ws/src/teleoperation/: CMakeLists.txt  README.md  notes_2.md  package.xml  setup.py
ros2_ws/src/teleoperation/config/: teleoperation.yaml  visionpro.rviz
ros2_ws/src/teleoperation/launch/: keyboard_launch_teleoperation.launch.py  launch_teleoperation.launch.py  sam_client.launch.py  teleoperation.launch copy.py  teleoperation.launch.py  teleoperation_sim.launch.py
ros2_ws/src/teleoperation/msg/: TeleopTarget.msg
ros2_ws/src/teleoperation/scripts/: camera_streamer.py  joint_state_to_mycobot.py  keyboard_ee_teleop.py  mujoco_streamer_node.py  sam_client.py  start_sam_tunnel.sh  vp_streamer.py  vp_transform_publisher.py
ros2_ws/src/teleoperation/src/: inverse_kinematics.cpp  teleop_control.cpp  teleop_control_cpp.cpp
ros2_ws/src/teleoperation/teleoperation/: camera_streamer.py  joint_state_to_mycobot.py  keyboard_ee_teleop.py  mujoco_streamer_node.py  mycobot_adapter.py  teleop_bridge.py  teleop_control.py  transform_publisher.py  vp_transform_publisher.py
